inputs validated and fixed the test overflow

--- a/src/App.css
+++ b/src/App.css
@@ -79,18 +79,16 @@ form > button:focus,
   gap: 10px;
 }
 .personal-cv > * {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-content: center;
+  text-align: center;
   background-color: rgb(62, 60, 60);
   border-radius: 5px;
   padding: 15px 5px;
-  flex-wrap: wrap;
 }
 .experience-cv > ul,
 .practical-cv > ul {
   list-style-type: none;
-  width: 100%;
 }
 .practical-cv > h3 {
   text-align: center;
@@ -118,12 +116,9 @@ form > button:focus,
   }
 }
 @media (max-width: 480px) {
-  .experience-cv,
-  .practical-cv {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
+  .experience-cv > h2,
+  .practical-cv > h2 {
+    text-align: center;
   }
   .personal-cv {
     grid-template-rows: repeat(4, 1fr);
