--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
 /* 2. Remove default margin */
 * {
   margin: 0;
-  word-break: break-all;
 }
 
 /* 3. Enable keyword animations */
@@ -53,7 +52,6 @@ h5,
 h6,
 li {
   overflow-wrap: break-word;
-  word-break: break-all;
 }
 
 /* 9. Improve line wrapping */
